force-app/main/default/objects/Linked_Tag__c/Linked_Tag__c.object-meta.xml
<CustomObject>
    <label>Linked Tag</label>
    <nameField>
        <displayFormat>LT-{00000}</displayFormat>
        <label>Linked Tag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>