force-app/main/default/objects/Linked_Tag__c/fields/Linked_Library_to_Tags__c.field-meta.xml
<CustomField>
    <fullName>Linked_Library_to_Tags__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Library to Tags</label>
    <referenceTo>Library__c</referenceTo>
    <relationshipLabel>Tags</relationshipLabel>
    <relationshipName>Linked_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>