force-app/main/default/objects/Linked_Tag__c/fields/Linked_Requirement_to_Tags__c.field-meta.xml
<CustomField>
    <fullName>Linked_Requirement_to_Tags__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Requirement to Tags</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Linked Tags</relationshipLabel>
    <relationshipName>Linked_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>