force-app/main/default/objects/Linked_Tag__c/fields/Linked_Tags__c.field-meta.xml
<CustomField>
    <fullName>Linked_Tags__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Tags</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Linked Tags (Linked Tags to Library)</relationshipLabel>
    <relationshipName>Linked_Tags2</relationshipName>
    <type>Lookup</type>
</CustomField>